--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "magento/module-widget-sample-data": "100.4.*",
         "magento/module-wishlist-sample-data": "100.4.*",
         "magento/product-community-edition": "2.4.6",
-        "magento/sample-data-media": "100.4.*"
+        "magento/sample-data-media": "100.4.*",
+        "markshust/magento2-module-disabletwofactorauth": "^2.0"
     },
     "autoload": {
         "exclude-from-classmap": [
