--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "magento/module-wishlist-sample-data": "100.4.*",
         "magento/product-community-edition": "2.4.6",
         "magento/sample-data-media": "100.4.*",
+        "mageplaza/module-smtp": "^4.7",
         "markshust/magento2-module-disabletwofactorauth": "^2.0"
     },
     "autoload": {
